--- a/index.html
+++ b/index.html
@@ -1,7 +1,128 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Bem-vindo!</h1>
-<p>Essa pagina esta em construção</p>
-</body>
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="Rodrigo Amaral Dias Soares" />
+        <title>Rodrigo - Portfólio</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Barra -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Rodrigo Amaral Dias Soares</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projetos</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiência</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#formation">Formação</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- Sobre -->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Rodrigo
+                        <span class="text-primary">Amaral Dias Soares</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Brazil · Desenvolvedor Backend · 
+                        <a href="mailto:rodrigoadiassoares@gmail.com">rodrigoadiassoares@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">Sou um desenvolvedor Backend, terminei minha faculdade no inicio do primeiro semestre de 2020. No momento estou estudando C# e JavaScript, desenvolvendo projetos por diversão e alguns para adiçao no dia a dia.</p>
+                    <p class="lead mb-5">Estou procurando uma vaga no mercado para aplicar e desenvolver minhas habilidades, colaborando com equipes e empresas para meu desenvolvimento pessoal e profissional.</p>
+                    <div class="subheading mb-5">Contato</div>
+                    <div class="social-icons">
+                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Projetos -->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projetos</h2>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Habilidades -->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Habilidades</h2>
+                    <div class="subheading mb-3">Linguagens e Frameworks</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experiencia -->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experiência</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Estagiário Digitalização</h3>
+                            <div class="subheading mb-3">SUPRAM - Alto São Francisco</div>
+                            <p>Auxiliar na digitalização de processos
+                                visando a atualização de banco de dados
+                                do sistema, colaborar na inserção de
+                                imagens em sistemas, cooperar no
+                                controle de documentação, colaborar no
+                                suporte e atualização de ferramentas,
+                                auxiliar na análise e solução de problemas
+                                relacionados a software e hardware.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Setembro 2017 - Dezembro 2018</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Formação -->
+            <section class="resume-section" id="formation">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Formação</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Universidade de Itaúna - UIT</h3>
+                            <div class="subheading mb-3">Bacharel em Ciência da Computação</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Conclusão 2020.1</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
