--- a/index.html
+++ b/index.html
@@ -43,17 +43,19 @@
                         <span class="text-primary">Amaral Dias Soares</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Brazil · Desenvolvedor Backend · 
+                        Brazil · FullStack Dev · 
                         <a href="mailto:rodrigoadiassoares@gmail.com">rodrigoadiassoares@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Sou um desenvolvedor Backend, terminei minha faculdade no inicio do primeiro semestre de 2020. No momento estou estudando C# e JavaScript, desenvolvendo projetos por diversão e alguns para adiçao no dia a dia.</p>
-                    <p class="lead mb-5">Estou procurando uma vaga no mercado para aplicar e desenvolver minhas habilidades, colaborando com equipes e empresas para meu desenvolvimento pessoal e profissional.</p>
-                    <div class="subheading mb-5">Contato</div>
+                    <p class="lead mb-5">I'm fullstack developer, finished my collage in 2020.1.<br>
+                    Actualy I'm studing ASP.NET Core, Blazor, RESTFull API's, SQL SERVER and JS.<br>
+                    Bellow you will find my projects, some for work, some for play.<br>
+                    Actualy I work in Makrosystem, developing and updgrading an web software for accounting.<br>
+                    Open to new experiences and oportunities in area.</p>
+                    <div class="subheading mb-5">Contact Me</div>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/rodrigo-rads/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/rodrigo-rads"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/rodrigoadsoares/?hl=pt-br"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
@@ -61,14 +63,14 @@
             <!-- Projetos -->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projetos</h2>
+                    <h2 class="mb-5">Projects</h2>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Habilidades -->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Habilidades</h2>
+                    <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Linguagens e Frameworks</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -83,7 +85,7 @@
             <!-- Experiencia -->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experiência</h2>
+                    <h2 class="mb-5">Professional experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Estagiário Digitalização</h3>
@@ -99,19 +101,34 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Setembro 2017 - Dezembro 2018</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fullstack Dev</h3>
+                            <div class="subheading mb-3">Makrosystem</div>
+                            <p>Dizeres</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Outubro 2020 - Now</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Formação -->
             <section class="resume-section" id="formation">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Formação</h2>
+                    <h2 class="mb-5">Academics</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Universidade de Itaúna - UIT</h3>
-                            <div class="subheading mb-3">Bacharel em Ciência da Computação</div>
+                            <h3 class="mb-0">Univesity of Itaúna - UIT</h3>
+                            <div class="subheading mb-3">Computer Science - B.A.</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Conclusão 2020.1</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">End 2020.1</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cisco</h3>
+                            <div class="subheading mb-3">Introduction to Cybersecurity</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">End 2020.8</span></div>
                     </div>
                 </div>
             </section>
